Fixing: * edit link position on mobile view bad * Position post time at the bottom of wrapped post title * post-nav does not have bottom margin on mobile view * Social comments are not resizing * menu link positioned wrong on mobile view
git-svn-id: https://git.crowdfave.org/svn/crowdfavorite/code/wp-themes/carrington-personal/trunk@42278 546ca710-db30-0410-8887-d9dd8e66aff0

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -154,7 +154,7 @@ html.ie7 #nav-main .menu > li {
 }
 .entry-header .entry-date {
 	position: absolute;	
-	top: 8px;
+	bottom: 0;
 	left: 0;
 }
 .entry-date a,
